# Douglang

./: .gitignore  404.html  Cargo.toml  README.md  index.html
.github/workflows/: pages.yml  sanity.yml
compiling/: index.html
control_flow/: index.html
docs/: mkdocs.yml
docs/docs/: compiling.md  control_flow.md  ffi.md  hey_doug.md  syntax_highlighting.js  variables.md
examples/: 13.doug  collatz.doug  counting.doug  doug_expr.doug  doug_notation.doug  fibonacci.doug  laundry.doug
ffi/: index.html
hey_doug/: index.html
nix/: package.nix  shell.nix
search/: search_index.json
src/: ast.rs  lexer.rs  lib.rs  main.rs  runtime.rs  token.rs  tts.rs
src/compiler/: launcher.c  mod.rs  runtime.c  runtime.rs
src/dougterface/: font.rs  mod.rs
src/interpreter/: error.rs  ffi.rs  mod.rs  value.rs
src/parser/: ast.rs  error.rs  helpers.rs  lexer.rs  mod.rs
src/values/: hashers.rs  literal.rs  mod.rs  operator.rs  tape.rs  value.rs
src/values/tape/: alloc.rs  block.rs  bump.rs  internal.rs  pointers.rs
variables/: index.html
