[package]
name = "douglang"
version = "0.1.1"
edition = "2024"
description = "Douglang interpreter and compiler"

[[bin]]
name = "douglang"
path = "src/main.rs"

[features]
default = []
llvm = []

[dependencies]
tts = "0.26"
minifb = "0.28"
image = "0.25"
ab_glyph = "0.2"
flate2 = "1"
libffi = "5"
thiserror = "2.0.18"
clap = "4.6.2"
